# qlzma

./: CMakeLists.txt  README.md
licenses/: LZMA SDK
q7z/: lib7z_facade.cpp
qlzma/: CMakeLists.txt
unix/: CMakeLists.txt
windows/: CMakeLists.txt
